--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ hw/system/pad_control/data/pad_control.hjson
 hw/system/pad_control/rtl/pad_control.sv
 hw/system/pad_control/rtl/pad_control_reg_pkg.sv
 hw/system/pad_control/rtl/pad_control_reg_top.sv
+hw/ip/power_manager/rtl/dma_reg_top.sv
+hw/ip/power_manager/rtl/dma_reg_pkg.sv
 
 # same for the C header file and linker scripts
 sw/device/lib/runtime/core_v_mini_mcu.h
@@ -45,6 +47,7 @@ sw/linker/link_flash_load.ld
 sw/device/lib/drivers/power_manager/power_manager_regs.h
 sw/device/lib/drivers/power_manager/power_manager.h
 sw/device/lib/drivers/pad_control/pad_control_regs.h
+sw/device/lib/drivers/dma/dma_regs.h
 sw/device/lib/drivers/**/*_structs.h
 
 # openroad
